# Transfer-Client

./: CMakeLists.txt  Makefile  README  TODO  clean.sh  create.sh
rel_bin/: update.sh
src/: Base.cpp  Base.h  CLI.cpp  CLI.h  Config.cpp  Config.h  IO.cpp  IO.h  Log.cpp  Log.h  NetworkCommunication.cpp  NetworkCommunication.h  Packet.cpp  Packet.h  PacketCreator.cpp  PacketCreator.h  Parameter.cpp  Parameter.h  Timer.cpp  Timer.h  Transfer-Client.cpp
